# octave-ir

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  ir-block.cc  ir-block.h  ir-build.cc  ir-build.h  ir-common-util.cc  ir-common-util.h  ir-common.h  ir-component.cc  ir-component.h  ir-constant.cc  ir-constant.h  ir-function.cc  ir-function.h  ir-instruction-fwd.h  ir-instruction.cc  ir-instruction.h  ir-module.cc  ir-module.h  ir-operand.cc  ir-operand.h  ir-structure.cc  ir-structure.h  ir-type-base.cc  ir-type-base.h  ir-type-extra.cc  ir-type-extra.h  ir-type-std.cc  ir-type-std.h  ir-type.cc  ir-type.h  ir-value.cc  ir-value.h  ir-variable.cc  ir-variable.h  ir-visitor.cc  (+5 more)
source/: CMakeLists.txt
source/compiler/: CMakeLists.txt
source/compiler/interface/: CMakeLists.txt
source/compiler/llvm/: CMakeLists.txt
source/compiler/llvm/headers/: CMakeLists.txt  arith-mappers.hpp  arith-maps.hpp  binary-maps.hpp  cmp-mappers.hpp  cmp-maps.hpp  function-translator.hpp  instruction-translator.hpp  llvm-common.hpp  llvm-constant.hpp  llvm-instruction-maps.hpp  llvm-interface.hpp  llvm-type.hpp  (+1 more)
source/dynamic-ir/: CMakeLists.txt
source/dynamic-ir/components/: CMakeLists.txt
source/dynamic-ir/include/: CMakeLists.txt
source/dynamic-ir/lib/: CMakeLists.txt
source/dynamic-ir/processors/: CMakeLists.txt
source/dynamic-ir/values/: CMakeLists.txt
source/dynamic-ir/visitors/: CMakeLists.txt
source/include/: CMakeLists.txt  ir-block.hpp  ir-common-util.hpp  ir-common.hpp  ir-component-fork.hpp  ir-component-handle.hpp  ir-component-loop.hpp  ir-component-sequence.hpp  ir-component.hpp  ir-constant.hpp  ir-def-resolution.hpp  ir-function.hpp  ir-instruction-fwd.hpp  ir-instruction.hpp  ir-link-set.hpp  ir-operand.hpp  ir-optional-util.hpp  ir-stack-builder.hpp  ir-structure.hpp  ir-traverser.hpp  ir-type-base.hpp  ir-type-extra.hpp  ir-type-ir.hpp  ir-type-std.hpp  ir-type.hpp  ir-variable.hpp
source/include/components/: CMakeLists.txt  ir-all-components.hpp  ir-block-common.hpp  ir-block.hpp  ir-component-fork.hpp  ir-component-fwd.hpp  ir-component-handle.hpp  ir-component-loop.hpp  ir-component-sequence.hpp  ir-component.hpp  ir-function.hpp  ir-structure-fwd.hpp  ir-structure.hpp
source/include/processors/: CMakeLists.txt  ir-ascending-def-propagator.hpp  ir-def-propagator.hpp  ir-def-resolution.hpp
source/include/utilities/: CMakeLists.txt  ir-allocator-util.hpp  ir-common-util.hpp  ir-common.hpp  ir-error.hpp  ir-functional.hpp  ir-index-sequence-map.hpp  ir-iterator.hpp  ir-link-set.hpp  ir-optional-util.hpp  ir-type-traits.hpp
source/include/values/: CMakeLists.txt  ir-constant.hpp  ir-def.hpp  ir-instruction-fwd.hpp  ir-instruction.hpp  ir-operand.hpp  ir-use-timeline.hpp  ir-use.hpp  ir-variable.hpp
source/include/visitors/: CMakeLists.txt  ir-abstract-inspector.hpp  ir-all-component-visitors.hpp  ir-all-subcomponent-visitors.hpp  ir-all-substructure-visitors.hpp  ir-all-visitors-fwd.hpp  ir-all-visitors.hpp  ir-component-visitors.hpp  ir-stack-builder.hpp  ir-structure-visitors.hpp  ir-traverser.hpp  ir-visitor-fwd.hpp  ir-visitor.hpp
source/lib/: CMakeLists.txt  ir-block.cpp  ir-common-util.cpp  ir-component-fork.cpp  ir-component-loop.cpp  ir-component-sequence.cpp  ir-component.cpp  ir-constant.cpp  ir-def-resolution.cpp  ir-function.cpp  ir-instruction.cpp  ir-operand.cpp  ir-stack-builder.cpp  ir-structure.cpp  ir-traverser.cpp  ir-type-base.cpp  ir-type-extra.cpp  ir-type-ir.cpp  ir-type-std.cpp  ir-type.cpp  ir-variable.cpp
source/lib/components/: CMakeLists.txt  ir-block.cpp  ir-component-fork.cpp  ir-component-loop.cpp  ir-component-sequence.cpp  ir-component.cpp  ir-function.cpp  ir-structure.cpp
source/lib/processors/: CMakeLists.txt  ir-ascending-def-propagator.cpp  ir-def-propagator.cpp  ir-def-resolution.cpp
source/lib/utilities/: CMakeLists.txt  ir-common-util.cpp  ir-error.cpp  ir-link-set.cpp  ir-utility.cpp
source/lib/values/: CMakeLists.txt  ir-constant.cpp  ir-def.cpp  ir-instruction.cpp  ir-operand.cpp  ir-use-timeline.cpp  ir-use.cpp  ir-variable.cpp
source/lib/visitors/: ir-stack-builder.cpp  ir-traverser.cpp  ir-visitor.cpp
source/static-ir/: CMakeLists.txt
source/static-ir/headers/: CMakeLists.txt  ir-constant.hpp  ir-external-function-info.hpp  ir-metadata.hpp  ir-object-id.hpp  ir-static-block.hpp  ir-static-def.hpp  ir-static-function.hpp  ir-static-id.hpp  ir-static-instruction.hpp  ir-static-operand.hpp  ir-static-use.hpp  ir-static-variable.hpp  ir-type-util.hpp  ir-type.hpp
source/static-ir/lib/: ir-constant.cpp  ir-metadata.cpp  ir-static-block.cpp  ir-static-constant.cpp  ir-static-def.cpp  ir-static-function.cpp  ir-static-instruction.cpp  ir-static-module.cpp  ir-static-operand.cpp  ir-static-unit.cpp  ir-static-use.cpp  ir-static-variable.cpp  ir-type-base.cpp  ir-type-std.cpp  ir-type-util.cpp  ir-type.cpp
source/static-ir/sources/: CMakeLists.txt  ir-constant.cpp  ir-external-function-info.cpp  ir-metadata.cpp  ir-static-block.cpp  ir-static-def.cpp  ir-static-function.cpp  ir-static-instruction.cpp  ir-static-operand.cpp  ir-static-use.cpp  ir-static-variable.cpp  ir-type-util.cpp  ir-type.cpp
source/test/: CMakeLists.txt  extern-funcs.cpp  jit-exception.hpp  main.cpp  scratch.cpp  test-add.cpp  test-call.cpp  test-extern.cpp  test-if.cpp  test-land.cpp  test-lnot.cpp  test-loop.cpp  test-lor.cpp  test-nested-loop.cpp  test-sub.cpp  test-templates.hpp  test-uninit.cpp
source/test/doctest/: CMakeLists.txt  main.test.cpp
source/test/scratch/: CMakeLists.txt  scratch.cpp
source/utilities/: CMakeLists.txt
source/utilities/headers/: CMakeLists.txt  ir-allocator-util.hpp  ir-common.hpp  ir-error.hpp  ir-functional.hpp  ir-index-sequence-map.hpp  ir-iterator.hpp  ir-link-set.hpp  ir-optional-util.hpp  ir-type-pack.hpp  ir-type-traits.hpp  ir-utility.hpp
source/utilities/lib/: ir-error.cpp  ir-link-set.cpp  ir-utility.cpp
source/utilities/sources/: CMakeLists.txt  ir-error.cpp  ir-link-set.cpp  ir-utility.cpp  static-checks.cpp
source/utilities/test/: CMakeLists.txt
(+523 files in other folders)
